# alphabot

./: CMakeLists.txt  Dockerfile  ImageProcessing.cpp  ImageProcessing.h  MQTT.cpp  MQTT.h  Mqtt.cpp  Mqtt.h  README.md  RequestProcessing.cpp  RequestProcessing.h  alphabot.cpp  controller.cpp  controller.h  detector.cpp  detector.h  main.cpp  test
Alphabot/: ClassDiagram.txt  ClassDiagram.txt.bak  Report.docx  StateDiagram.txt  UseCaseDiagram.txt
alphabotMqttPub/: CMakeLists.txt  Pub.cpp  Subscriber.h
alphabotMqttSub/: CMakeLists.txt  MqttSub.cpp  Subscriber.cpp  Subscriber.h
